fixes nav menu central alignment

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -79,7 +79,8 @@ a:hover, a:focus {
 
 .menu-item {
 	display: inline-block;
-	margin-right: 30px
+	margin-right: 15px;
+	margin-left: 15px;
 }
 
 .active-item {
